--- a/FindMe.Web.Bo/wwwroot/css/colors.css
+++ b/FindMe.Web.Bo/wwwroot/css/colors.css
@@ -34,6 +34,11 @@
     background-color: #e9e9e9 !important;
 }
 
+/* FindMe's Green Backgroundcolor */
+.findme-color-bc-green {
+    background-color: #36d03e !important;
+}
+
 
 /* FindMe's Main forecolor */
 .findme-color-fc-white {
@@ -63,4 +68,9 @@
 /* FindMe's Light Gray forecolor */
 .findme-color-fc-lgray {
     color: #F3F3F4 !important;
+}
+
+/* FindMe's Green forecolor */
+.findme-color-fc-green {
+    color: #36d03e !important;
 }
