--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Addresses.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Addresses.html
@@ -80,6 +80,83 @@
 
                     <div class="row">
                         <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                            <div>
+                                <span class="bold-text bigger findme-color-fc-pink">{{vm.appProps.lbl_Imgs}}</span>
+
+                                <button type="button" class="btn btn-findme btn-xs no-outline" ng-click="vm.addImage()"><span class="fa fa-plus-square"></span></button>
+                            </div>
+
+                            <table class="table data table-striped table-hover images" ng-show="vm.address.images && vm.address.images.length > 0">
+                                <thead>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <b>{{vm.appProps.lbl_Prvw}}</b>
+                                        </td>
+                                        <td>
+                                            <b>{{vm.appProps.lbl_Alt}}</b>
+                                        </td>
+                                        <td>
+                                            <b>{{vm.appProps.lbl_Desc}}</b>
+                                        </td>
+                                        <td class="text-center">
+                                            <b>{{vm.appProps.lbl_Actv}}</b>
+                                        </td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="img in vm.address.images" ng-class="img.recordState === 30 ? 'inDeleteMode' : ''">
+                                        <td>
+                                            <button ng-hide="img.recordState === 30" ng-click="" type="button" class="btn btn-findme btn-xs no-animate">
+                                                <span class="fa fa-trash"></span>
+                                            </button>
+                                            <button ng-show="img.recordState === 30" ng-click="" type="button" class="btn btn-findme btn-xs no-animate">
+                                                <span class="fa fa-ban"></span>
+                                            </button>
+                                        </td>
+                                        <td>
+                                            <a ng-show="img.id > 0" href="" target="_blank" ng-href="{{img.url}}">
+                                                <img width="60" height="60" ng-src="{{img.thumbUrl}}" alt="{{img.alt}}"/>
+                                            </a>
+                                            &nbsp;
+                                            &nbsp;
+                                            <form class="inline-element img-upload" method="post"  action="/ApiAddress/UploadAddressImage/?data=xxxxx" enctype="multipart/form-data">
+                                                <button type="button" class="btn btn-findme btn-sm" ng-click="vm.uploadImgClick($event, img)">
+                                                    <span class="fa fa-upload"></span>
+                                                </button>
+                                                <input type="file" class="hidden" name="file-{{$index}}" data-index="{{$index}}"/>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <input class="form-control" ng-model="img.alt" />
+                                        </td>
+                                        <td>
+                                            <textarea class="form-control" ng-model="img.desc"></textarea>
+                                        </td>
+                                        <td class="text-center">
+                                            <span class="fa fa-2x no-animate" ng-hide="img.inEditMode" ng-class="img.active ? 'fa-check text-success' : 'fa-times text-danger'"></span>
+
+                                            <span ng-show="img.inEditMode" class="check-box">
+                                                <input type="checkbox" value="None" id="addrImgActive-{{img.id}}" name="addrImgActive-{{img.id}}" ng-model="img.active" />
+                                                <label class="lbl-chkb" for="addrImgActive-{{img.id}}"></label>
+                                            </span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+
+                    <br />
+                    <hr />
+                </div>
+
+                <div ng-show="vm.address.id > 0">
+
+                    <div class="row">
+                        <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <span class="bold-text bigger findme-color-fc-pink">
                                 {{vm.appProps.lbl_Rating}}
                             </span>
@@ -293,13 +370,15 @@
 
     <div uib-collapse="!vm.showError" style="padding: 20px;">
 
-        <div uib-alert class="alert alert-danger" close="vm.showError = false;">
-            <h4>
-                {{vm.errorstatus}}
-            </h4>
-            <p>
-                {{vm.errormsg}}
-            </p>
+        <div style="z-index: 5000;">
+            <div uib-alert class="alert alert-danger" close="vm.showError = false;">
+                <h4>
+                    {{vm.errorstatus}}
+                </h4>
+                <p>
+                    {{vm.errormsg}}
+                </p>
+            </div>
         </div>
     </div>
 
@@ -445,7 +524,7 @@
                             <label class="lbl-chkb" for="addressFbFans-{{address.id}}"></label>
                         </span>-->
                     </td>
-  <td cl
+                    <td cl
                     <td cl
                     <td class="text-center">
                         <span class="fa {{address.active ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x no-animate"></span>
